# UTCTF-22

./: README.md
misc1/crypto-failed-hash-function/: Dockerfile  README.md  challenge.yml  docker-compose.yaml  flag.txt  start.sh
misc1/crypto-forky/: Dockerfile  challenge.yml  docker-compose.yml  solution.py
misc1/networking-malformed-query/: Dockerfile  README.md  challenge.yml  client.go  docker-compose.yml  flag.txt
misc1/osint-full/: Dockerfile  challenge.yml  docker-compose.yml  go.mod  quickstart.go  token.json
misc1/reversing-battleship/: Cargo.toml  Dockerfile  app.readable.js  battleship_pb2.py  build.rs  challenge.yml  docker-compose.yml  rustfmt.toml  site.conf  solution.py
misc1/reversing-battleship/src/: lib.rs  main.rs
misc1/reversing-battleship/static/: app.js  index.html  style.css
misc1/reversing-battleship/static/protos/: battleship.proto
misc2/misc-public-panic/: Dockerfile  challenge.yml  docker-compose.yml  index.html  inner-page.html  portfolio-details.html
misc2/misc-public-panic-p2/: Dockerfile  challenge.yml  docker-compose.yml  flag.txt
osint-full/: docker-compose.yml
pwn/beginner-AAAAAAAAAAAAAAAA/: docker-compose.yaml
pwn/beginner-jump/: challenge.yml  docker-compose.yaml  sol.py
pwn/pwn-aeg2/: .gdb_history  Dockerfile  challenge.yml  docker-compose.yaml  run.py  sol.py  start.sh  template.c
pwn/pwn-bloat/: Dockerfile  challenge.yml  docker-compose.yaml  start.sh
pwn/pwn-smol-overflow/: .gdb_history  challenge.yml  docker-compose.yaml  sol.py
unhosted/beginner-baby-shark/: challenge.yml  flag.txt
(+106 files in other folders)
